--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1567,14 +1567,14 @@
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		border-bottom: solid 1px #007EA7;
+		border-bottom: solid 1px #5e60ce;
 		color: inherit;
 		text-decoration: none;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #007EA7 !important;
+			color: #5e60ce !important;
 		}
 
 	strong, b {
@@ -1591,7 +1591,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #007EA7;
+		color: #5e60ce;
 		font-weight: 700;
 		line-height: 1em;
 		margin: 0 0 0.5625em 0;
@@ -1726,12 +1726,12 @@
 	}
 
 	header.major h2 {
-		color: #007EA7;
+		color: #5e60ce;
 		font-size: 3.5em;
 	}
 
 		header.major h2 + p {
-			color: #007EA7;
+			color: #5e60ce;
 			font-size: 1.75em;
 			font-weight: 700;
 			margin-top: -0.75em;
@@ -2092,7 +2092,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #007EA7;
+					background: #5e60ce;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
@@ -2461,7 +2461,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #007EA7;
+		background: #5e60ce;
 		color: #ffffff;
 		height: 100%;
 		overflow-y: auto;
@@ -2550,7 +2550,7 @@
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #007EA7;
+					border-top: solid 2px #5e60ce;
 					display: block;
 					padding: 0;
 				}
@@ -2848,7 +2848,7 @@
 					}
 
 					#titleBar .toggle:before {
-						background: #007EA7;
+						background: #5e60ce;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
