--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,6 +50,24 @@
 							<section id="three">
 								{% include section3.html %}
 							</section>
+						
+						<!-- Four -->
+							<section id="four">
+								{% include section4.html %}
+							</section>
+						
+						<!-- Five -->
+							<section id="five">
+								{% include section5.html %}
+							</section>
+						
+						<!-- Six -->
+							<section id="six">
+								{% include section6.html %}
+							</section>
+
+
+
 
 					</div>
 
