--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,28 @@
-  <ul>
-    <li><a href="#one" class="active">{{site.nav1}}</a></li>
-    <li><a href="#two">{{site.nav2}}</a></li>
-    <li><a href="#three">{{site.nav3}}</a></li>
-  </ul>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1561.6">
+  <style type="text/css">
+    p.p2 {margin: 0.0px 0.0px 0.0px 36.0px; text-indent: -36.0px; line-height: 14.0px; font: 12.0px Times; color: #0000ee; -webkit-text-stroke: #0000ee}
+    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #0000ee; -webkit-text-stroke: #0000ee}
+    span.s1 {-webkit-text-stroke: 0px #000000}
+    span.s2 {text-decoration: underline ; font-kerning: none}
+    span.Apple-tab-span {white-space:pre}
+    ul.ul1 {list-style-type: disc}
+  </style>
+</head>
+<body>
+<ul class="ul1">
+  <li class="li1"><span class="s1"></span><span class="s2">{{site.nav1}}</span></li>
+  <li class="li1"><span class="s1"></span><span class="s2">{{site.nav2}}</span></li>
+  <li class="li1"><span class="s1"></span><span class="s2">{{site.nav3}}</span></li>
+</ul>
+<p class="p2"><span class="s1"><span class="Apple-tab-span">	</span>•<span class="Apple-tab-span">	</span></span><span class="s2">{{site.nav4}}</span></p>
+<p class="p2"><span class="s1"><span class="Apple-tab-span">	</span>•<span class="Apple-tab-span">	</span></span><span class="s2">{{site.nav5}}</span></p>
+<p class="p2"><span class="s1"><span class="Apple-tab-span">	</span>•<span class="Apple-tab-span">	</span></span><span class="s2">{{site.nav6}}</span></p>
+</body>
+</html>
